Refactor: Enhance touchpad functionality and QR scanning
This commit introduces several improvements to the touchpad input handling and QR code scanning features.

Key changes:
- `InputHandler.java`:
    - Replaced `TouchpadListener` with more specific listeners: `MoveListener`, `ClickListener`, and `ScrollListener`.
    - Implemented `GestureDetector` to handle single taps (left click), double taps (right click), and scrolling (two-finger drag).
    - Mouse movement is now triggered by single-finger drag.
- `MainActivity.java`:
    - Extracted QR scanning logic into a new `QRScannerHandler` class.
    - Implements `QRScanListener` to receive scan results.
- `QRScannerHandler.java`:
    - New class responsible for launching the QR scanner and delivering results via `QRScanListener`.
    - Configures scanner options, including setting a custom `QRScannerActivityPortrait`.
- `QRScannerActivityPortrait.java`:
    - New empty activity extending `CaptureActivity` to enforce portrait orientation for the QR scanner.
- `ProtocolBuilder.java`:
    - Removed unused `ZoomType` enum.
    - Adjusted `buildZoomPacket` to send a single byte for zoom level.
    - Modified `buildScrollPacket` to prioritize either horizontal or vertical scroll based on which delta is larger, zeroing out the other.
    - Updated `buildClickPacket` to accept a `Protocol.MouseButton` enum.
- `TouchpadActivity.java`:
    - Updated `InputHandler` instantiation to use the new listeners for move, click, and scroll events.
    - Sends corresponding WebSocket messages for each input type.
- `WebSocketClient.java`:
    - Minor log message update.
- `AndroidManifest.xml`:
    - Added `QRScannerActivityPortrait` to the manifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,20 +33,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PixLinkMobile"
         tools:targetApi="31">
+
         <activity
             android:name=".TouchpadActivity"
             android:exported="false"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".QRScannerActivityPortrait"
+            android:screenOrientation="fullSensor"
+            android:stateNotNeeded="true"
+            android:theme="@style/Theme.PixLinkMobile"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            tools:ignore="DiscouragedApi" />
 
         <service
             android:name=".PixlinkForegroundService"
